--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
         <img src="img/traveloka.png" />
       </div>
       <div class="sponsor">
-        <img src="img/Pegipegi.png" />
+        <img src="img/pegi.png" />
       </div>
     </div>
     <!-- END SPONSOR -->
