--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
           text-align: center;
           margin: 2px 0 0 0;
         }
+        .nav-header a{
+          font-size:16px;
       }
 
       /* END HEADER */
