--- a/index.html
+++ b/index.html
@@ -76,8 +76,6 @@
           text-align: center;
           margin: 2px 0 0 0;
         }
-        .nav-header a{
-          font-size:14px;
       }
 
       /* END HEADER */
@@ -685,7 +683,7 @@
         <img src="img/traveloka.png" />
       </div>
       <div class="sponsor">
-        <img src="img/pegi.png" />
+        <img src="img/pegipegi.png" />
       </div>
     </div>
     <!-- END SPONSOR -->
