--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
       </div>
 
       <div class="home-kanan">
-        <img src="img/balon.jpg" />
+        <img src="img/balonf.jpg" />
       </div>
     </div>
     <br /><br /><br /><br /><br />
