--- a/raja-ampat.html
+++ b/raja-ampat.html
@@ -336,7 +336,8 @@
             Mengimpikan Raja Ampat? Jadikan itu kenyataan, </i
           >"
           <a
-            href="https://www.indonesia.travel/id/id/destinasi/maluku-papua/raja-ampat"
+            href="https://www.indonesia.travel/id/id/
+            destinasi/maluku-papua/raja-ampat"
             >,
             https://www.indonesia.travel/id/id/destinasi/maluku-papua/raja-ampat</a
           >
