--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 
       function gunung() {
         document.getElementById("kategoriGambarSatu").innerHTML =
-          '<img src="img/gunung/Merapi.png" alt="">';
+          '<img src="img/gunung/mera.png" alt="">';
         document.getElementById("kategoriKalimatSatu").innerHTML =
           "<p>JAWA TENGAH</p><h2>Gunung Merapi - Destinasi Alam</h2>";
 
