--- a/index.html
+++ b/index.html
@@ -168,6 +168,9 @@
         .home-kiri h5 {
           font-size: 16px;
         }
+        .home-kiri p{
+          font-size: 14px;
+        }
         .home-kiri .home-kiri1 {
           width: 100%;
           display: flex;
@@ -275,6 +278,9 @@
         }
         .flex-dua {
           text-align: center;
+        }
+        .flex-dua .p2{
+          font-size:14px
         }
 
         .flex-dua h3 {
