--- a/about.html
+++ b/about.html
@@ -165,6 +165,9 @@
           width: 100%;
           margin: 30px 0 0 0;
         }
+        .box-about {
+          font-size:14px;
+        }
         .kalimat-about h3 {
           font-size: 30px;
           margin: -15px 0 0 0;
@@ -174,7 +177,10 @@
           margin: 30px 0 0 0;
         }
         .kalimat-about p {
-          font-size: 18px;
+          font-size: 14px;
+        }
+        .box-biodata p {
+          font-size:14px;
         }
       }
 
@@ -228,6 +234,9 @@
         }
         .box-content-satu img {
           display: none;
+        }
+        .kalimat-book-satu p {
+          font-size:14px;
         }
       }
 
