--- a/about.html
+++ b/about.html
@@ -165,7 +165,7 @@
           width: 100%;
           margin: 30px 0 0 0;
         }
-        .box-about {
+        .box-about p {
           font-size:14px;
         }
         .kalimat-about h3 {
