--- a/harga.html
+++ b/harga.html
@@ -108,7 +108,7 @@
           margin: -15px 0 0 0;
         }
         .kalimat-about p {
-          font-size: 18px;
+          font-size: 14px;
         }
       }
       .container-harga {
@@ -204,6 +204,9 @@
           width: 100%;
           text-align: center;
           margin: 0 0 30px 0;
+        }
+        .flex-kanan p {
+          font-size: 14px;
         }
       }
 
