--- a/harga.html
+++ b/harga.html
@@ -75,6 +75,9 @@
           text-align: center;
           margin: 2px 0 0 0;
         }
+        .nav-header a{
+          font-size:14px;
+        }
       }
 
       .pembatas {
