--- a/header.html
+++ b/header.html
@@ -65,6 +65,9 @@
           text-align: center;
           margin: 2px 0 0 0;
         }
+        .nav-header a{
+          font-size:14px;
+        }
       }
     </style>
   </head>
