--- a/raja-ampat.html
+++ b/raja-ampat.html
@@ -285,7 +285,7 @@ UML menyediakan sejumlah UML menyediakan sejumlah notasi grafis yang digunakan u
       </div>
 
       <p style="font-family: 'opensans'">
-        Beberapa spot menyelam terbaik dan paling terkenal di Raja Ampat di
+        Beberapa spot menyelam terbaik dan pling terkenal di Raja Ampat di
         antaranya adalah Kabui Passage, di sekitar Dermaga Pulau Arborek,
         Sauwandarek, Yenbuba, Dinding Friwen, dan banyak lagi! Tak heran ya,
         jika banyak sekali wisatawan mancanegara yang rela jauh-jauh datang ke
