--- a/raja-ampat.html
+++ b/raja-ampat.html
@@ -278,9 +278,7 @@
         <div class="flex-kalimat-ampat">
           <h3>RAJA AMPAT</h3>
           <p>
-            UML adalah singkatan dari "Unified Modeling Language," atau dalam bahasa indonesia yaitu "bahasa pemodelan terpadu "yang digunakan dalam rekayasa perangkat lunak, perencanaan sistem, dan dokumentasi desain untuk menggambarkan berbagai aspek dari sistem perangkat lunak yang akan dibangun.
-UML menyediakan sejumlah UML menyediakan sejumlah notasi grafis yang digunakan untuk menggambarkan elemen-elemen dalam sistem perangkat lunak, seperti kelas, objek, use case, aktivitas, komponen, dan lainnya. Melalui notasi-notasi ini, UML membantu dalam
-          </p>
+            Kepulauan Raja Ampat berada di bagian paling barat Papua dan membentang di area seluas kurang lebih 4,6 juta hektar. Kabupaten Raja Ampat terdiri dari 4 pulau besar yaitu Pulau Waigeo, Batanta, Salawati dan Misool, dan 1.847 pulau-pulau kecil lainnya. Nah, nama Raja Ampat sendiri diyakini berasal dari legenda masyarakat setempat yang percaya bahwa zaman dahulu kala ada seorang wanita yang menemukan tujuh telur, empat telur tersebut menetas menjadi raja-raja yang berkuasa di empat pulau utama. Tersisa tiga lainnya, satu menjadi batu, satu menjadi wanita, dan satu lagi menjadi makhluk gaib atau hantu.Terlepas legenda yang dipercayai masyarakat setempat, keindahan yang disuguhkan oleh Raja Ampat merupakan fakta yang tak bisa diganggu gugat.
         </div>
       </div>
 
