--- a/raja-ampat.html
+++ b/raja-ampat.html
@@ -287,21 +287,21 @@
         Berikut diagram-diagram dalam UML:
 
 Structural Diagram
-
+<br>
 Class Diagram: sebuah diagram yang menjelaskan hubungan antar class dalam sebuah sistem yang sedang dibuat dan menjelaskan bagaimana caranya agar mereka saling berkolaborasi.
-Object Diagram: sebuah gambaran tentang objek-objek dalam sebuah sistem pada satu titik waktu. Karena lebih menonjolkan perintah-perintah daripada class, object diagram lebih sering disebut sebagai sebuah diagram perintah.
-Component Diagram: diagram yang menampilkan komponen dalam sistem dan hubungan antara mereka.
-Deployment Diagram: Diagram yang menunjukkan tata letak sebuah sistem secara fisik, menampakkan bagian-bagian software yang berjalan pada bagian-bagian hardware yang digunakan untuk mengimplementasikan sebuah sistem dan keterhubungan antara komponen-komponen hardware 
+<br>Object Diagram: sebuah gambaran tentang objek-objek dalam sebuah sistem pada satu titik waktu. Karena lebih menonjolkan perintah-perintah daripada class, object diagram lebih sering disebut sebagai sebuah diagram perintah.
+<br>Component Diagram: diagram yang menampilkan komponen dalam sistem dan hubungan antara mereka.
+<br>Deployment Diagram: Diagram yang menunjukkan tata letak sebuah sistem secara fisik, menampakkan bagian-bagian software yang berjalan pada bagian-bagian hardware yang digunakan untuk mengimplementasikan sebuah sistem dan keterhubungan antara komponen-komponen hardware 
         <br />
         <br />
 
         Behavioral Diagram
-
-Activity Diagram: diagram yang menggambarkan alur kerja dari berbagai aktivitas user atau sistem, orang yang melakukan aktivitas, dan aliran berurutan dari aktivitas ini.
-Use case Diagram: diaagram yang menunjukkan peran user dan bagaimana peran tersebut ketika menggunakan sistem. Use case diagram juga dapat digunakan untuk memprepresentasikan interaksi user dengan sistem dan menggambarkan spesifikasi kasus penggunaan.
-System Sequence Diagram: diagram yang menggambarkan interaksi user dengan sistem secara sekuensial (berurutan).
-Collaboration Diagram: diagram yang merupakan bentuk lain dari sequence diagram. Diagram ini menggambarkan struktur organisasi dari sistem dengan pesan yang diterima dan dikirim.
-Statechart Diagram: diagram yang menggambarkan bagaimana sistem dapat bereaksi terhadap suatu kejadian dari dalam atau luar. Kejadian (event) ini bertanggung jawab terhadap perubahan keadaan sistem.
+<br>
+<br>Activity Diagram: diagram yang menggambarkan alur kerja dari berbagai aktivitas user atau sistem, orang yang melakukan aktivitas, dan aliran berurutan dari aktivitas ini.
+<br>Use case Diagram: diaagram yang menunjukkan peran user dan bagaimana peran tersebut ketika menggunakan sistem. Use case diagram juga dapat digunakan untuk memprepresentasikan interaksi user dengan sistem dan menggambarkan spesifikasi kasus penggunaan.
+<br>System Sequence Diagram: diagram yang menggambarkan interaksi user dengan sistem secara sekuensial (berurutan).
+<br>Collaboration Diagram: diagram yang merupakan bentuk lain dari sequence diagram. Diagram ini menggambarkan struktur organisasi dari sistem dengan pesan yang diterima dan dikirim.
+<br>Statechart Diagram: diagram yang menggambarkan bagaimana sistem dapat bereaksi terhadap suatu kejadian dari dalam atau luar. Kejadian (event) ini bertanggung jawab terhadap perubahan keadaan sistem.
         <br /><br />
       </p>
 
