--- a/raja-ampat.html
+++ b/raja-ampat.html
@@ -289,9 +289,9 @@
 Structural Diagram
 <br>
 Class Diagram: sebuah diagram yang menjelaskan hubungan antar class dalam sebuah sistem yang sedang dibuat dan menjelaskan bagaimana caranya agar mereka saling berkolaborasi.
-<br> Object Diagram: sebuah gambaran tentang objek-objek dalam sebuah sistem pada satu titik waktu. Karena lebih menonjolkan perintah-perintah daripada class, object diagram lebih sering disebut sebagai sebuah diagram perintah.
-<br> Component Diagram: diagram yang menampilkan komponen dalam sistem dan hubungan antaraa mereka.
-<br> Deployment Diagram: Diagram yang menunjukkan tata letak sebuah sistem secara fisik, menampakkan bagian-bagian software yang berjalan pada bagian-bagian hardware yang digunakan untuk mengimplementasikan sebuah sistem dan keterhubungan antara komponen-komponen hardware 
+<br><br> Object Diagram: sebuah gambaran tentang objek-objek dalam sebuah sistem pada satu titik waktu. Karena lebih menonjolkan perintah-perintah daripada class, object diagram lebih sering disebut sebagai sebuah diagram perintah.
+<br><br> Component Diagram: diagram yang menampilkan komponen dalam sistem dan hubungan antaraa mereka.
+<br><br> Deployment Diagram: Diagram yang menunjukkan tata letak sebuah sistem secara fisik, menampakkan bagian-bagian software yang berjalan pada bagian-bagian hardware yang digunakan untuk mengimplementasikan sebuah sistem dan keterhubungan antara komponen-komponen hardware 
         <br />
         <br />
 
