--- a/raja-ampat.html
+++ b/raja-ampat.html
@@ -297,11 +297,11 @@ Class Diagram: sebuah diagram yang menjelaskan hubungan antar class dalam sebuah
 
         Behavioral Diagram
 <br>
-<br> Activity Diagram: diagram yang menggambarkan alur kerjaa dari berbagai aktivitas user atau sistem, orang yang melakukan aktivitas, dan aliran berurutan dari aktivitas ini.
-<br> Use case Diagram: diaagram yang menunjukkan peran user dan bagaimana peran tersebut ketika menggunakan sistem. Use case diagram juga dapat digunakan untuk memprepresentasikan interaksi user dengan sistem dan menggambarkan spesifikasi kasus penggunaan.
-<br> System Sequence Diagram: diagram yang menggambarkan interaksi user dengan sistem secara sekuensial (berurutan).
-<br> Collaboration Diagram: diagram yang merupakan bentuk lain dari sequence diagram. Diagram ini menggambarkan struktur organisasi dari sistem dengan pesan yang diterima dan dikirim.
-<br> Statechart Diagram: diagram yang menggambarkan bagaimana sistem dapat bereaksi terhadap suatu kejadian dari dalam atau luar. Kejadian (event) ini bertanggung jawab terhadap perubahan keadaan sistem.
+<br><br> Activity Diagram: diagram yang menggambarkan alur kerjaa dari berbagai aktivitas user atau sistem, orang yang melakukan aktivitas, dan aliran berurutan dari aktivitas ini.
+<br><br> Use case Diagram: diaagram yang menunjukkan peran user dan bagaimana peran tersebut ketika menggunakan sistem. Use case diagram juga dapat digunakan untuk memprepresentasikan interaksi user dengan sistem dan menggambarkan spesifikasi kasus penggunaan.
+<br><br> System Sequence Diagram: diagram yang menggambarkan interaksi user dengan sistem secara sekuensial (berurutan).
+<br><br> Collaboration Diagram: diagram yang merupakan bentuk lain dari sequence diagram. Diagram ini menggambarkan struktur organisasi dari sistem dengan pesan yang diterima dan dikirim.
+<br><br> Statechart Diagram: diagram yang menggambarkan bagaimana sistem dapat bereaksi terhadap suatu kejadian dari dalam atau luar. Kejadian (event) ini bertanggung jawab terhadap perubahan keadaan sistem.
         <br /><br />
       </p>
 
