--- a/raja-ampat.html
+++ b/raja-ampat.html
@@ -276,7 +276,7 @@
       <div class="flex-raja-ampat">
         <img src="img/raja-ampat.jpg" alt="" />
         <div class="flex-kalimat-ampat">
-          <h3>UML</h3>
+          <h3>Diagram UML</h3>
           <p>
             UML adalah singkatan dari "Unified Modeling Language," atau dalam bahasa indonesia yaitu "bahasa pemodelan terpadu "yang digunakan dalam rekayasa perangkat lunak, perencanaan sistem, dan dokumentasi desain untuk menggambarkan berbagai aspek dari sistem perangkat lunak yang akan dibangun. UML menyediakan sejumlah UML menyediakan sejumlah notasi grafis yang digunakan untuk menggambarkan elemen-elemen dalam sistem perangkat lunak, seperti kelas, objek, use case, aktivitas, komponen, dan lainnya. Melalui notasi-notasi ini, UML membantu dalam
           </p>
