--- a/raja-ampat.html
+++ b/raja-ampat.html
@@ -287,7 +287,7 @@
   <ol>
     <b>Fungsi :</b>
 <br><br>
-    1. Memvisualisasikan model data sebuah sistem, baik yang sederhana maupun dengan kompleks.<br> 
+    1. Memvisualisasikan model data sebuah sistem, baik yang sederhana maupun dengan komplek.<br> 
     2. Membantu mengetahui kode spesifik tertentu yang perlu diprogram dan diimplementasikan ke struktur sistem yang telah direncanakan<br>
     3. Memperlihatkan bagaimana sistem bekerja, termasuk memperlihatkan hubungan antara komponen sistem<br>
     <b>Komponen</b>
